# django-crash-course

./: .gitignore  pyproject.toml
everycheese/: .envrc  CONTRIBUTORS.md
everycheese/config/settings/: base.py
everycheese/everycheese/cheeses/: admin.py  models.py
everycheese/everycheese/cheeses/migrations/: 0001_initial.py  0002_cheese_description.py
everycheese/everycheese/cheeses/tests/: test_models.py
everycheese/everycheese/users/: models.py  views.py
everycheese/everycheese/users/migrations/: 0002_user_bio.py
hellodjango/: pyproject.toml
hellodjango/hellodjango/: settings.py  urls.py
hellodjango/homepage/: views.py
hellodjango/templates/: index.html
tests/: test_django_crash_course.py
